# imgsize

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  README.md  benchmark.py  benchmark_requirements.txt  imgsize.pyi  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
examples/: cli.rs
imgsize/: __init__.py  __main__.py  core.py  tests.py
imgsize/formats/: __init__.py  bmp.py  gif.py  jpg.py  png.py
imgsize/testdata/: lenna.gif.json  tori.bmp.json
python-tests/: conftest.py  test_apis.py  test_sample_files.py
src/: avif.rs  bmp.rs  gif.rs  jpg.rs  lib.rs  png.rs  utils.rs
src/test-data/: avis.output  bmp.output  example.apng.output  example.avif.output  example.bmp.output  example.gif.output  example.jpg.output  example.png.output  gif.output  gif2.input  gif2.output  gifanim2.output  hackerman.jpeg.output  jpeg.input  jpeg.output
