[package]
name = "imgsize"
version = "3.0.1"
edition = "2021"

[lib]
name = "imgsize"
crate-type = ["cdylib", "lib"]

[dependencies]
byteorder = "1.5.0"
pyo3 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }

[dev-dependencies]
clap = { version = "4.5.16", features = ["derive"] }
paste = "1.0.15"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[[example]]
name = "cli"
