[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "imgsize"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "maturin"
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]